# docs/swagger/swagger.json
@@ -1924,6 +1924,55 @@
                 }
             }
         },
+        "/users/me": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Returns the user information based on the provided token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get current user information from token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_hoangtu1372k2_vms_internal_model.JsonDTORsp-github_com_hoangtu1372k2_vms_internal_model_UpdateUser"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_hoangtu1372k2_vms_internal_model.JsonDTORsp-github_com_hoangtu1372k2_vms_internal_model_UpdateUser"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_hoangtu1372k2_vms_internal_model.JsonDTORsp-github_com_hoangtu1372k2_vms_internal_model_UpdateUser"
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}": {
             "get": {
                 "security": [
@@ -2367,8 +2416,11 @@
                 "full_name": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "string"
+                },
                 "password": {
-                    "description": "Changed from password_hash since this is raw password",
+                    "description": "Changed from password since this is raw password",
                     "type": "string"
                 },
                 "phone_number": {
@@ -2385,7 +2437,7 @@
                         "admin"
                     ]
                 },
-                "user_id": {
+                "user_name": {
                     "type": "string"
                 }
             }
@@ -3136,6 +3188,9 @@
                 "full_name": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "string"
+                },
                 "phone_number": {
                     "type": "string"
                 },
@@ -3148,7 +3203,7 @@
                 "updated_at": {
                     "type": "string"
                 },
-                "user_id": {
+                "user_name": {
                     "type": "string"
                 }
             }
@@ -3175,7 +3230,10 @@
                 "full_name": {
                     "type": "string"
                 },
-                "password_hash": {
+                "id": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 },
                 "phone_number": {
@@ -3191,7 +3249,7 @@
                 "updated_at": {
                     "type": "string"
                 },
-                "user_id": {
+                "user_name": {
                     "type": "string"
                 }
             }
